Fix z-index issues with side divs and video controls

--- a/MemoryMosaic/Styles/Components/FullscreenViewer/FullscreenViewer.scss
+++ b/MemoryMosaic/Styles/Components/FullscreenViewer/FullscreenViewer.scss
@@ -7,7 +7,7 @@
 	left: 0;
 	height: 100%;
 	width: 100%;
-	z-index: 99999;
+	z-index: 9999;
 	background-color: black;
 
 	> #content {
@@ -20,6 +20,7 @@
 			width: 25%;
 			height: 100%;
 			top: 0;
+			z-index: 99999;
 
 			&:hover {
 				cursor: pointer;
@@ -59,6 +60,7 @@
 			height: 100%;
 			justify-content: center;
 			align-items: center;
+			z-index: 999999;
 
 			background-color: purple;
 
